--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,373 +1,377 @@
 <div class="row">
 	<h2 class="page-header">Latest Currency Rates:</h2>
 </div>
-<div align="left">
-	<table style="width:50%">
-		<tr>
-			<th>Symbol</th>
-			<th>Code</th>
-			<th>Currency</th> 
-			<th>Daily Rate</th>
-		</tr>
-		<tr>
-			<td>؋</td>
-			<td>AFN</td>
-			<td>Afghan Afghani</td>
-			<td>{{AFN}}</td>
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>ARS</td>
-			<td>Argentine Peso</td>
-			<td>{{ARS}}</td>
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>AUD</td>
-			<td>Australian Dollar</td>
-			<td>{{AUD}}</td>	    
-		</tr>
-		<tr>
-			<td>лв</td> 
-			<td>BGN</td>
-			<td>Bulgarian Lev</td>
-			<td>{{BGN}}</td>
-		</tr>
-		<tr>
-			<td>R$</td> 
-			<td>BRL</td>
-			<td>Brazilian Real</td>
-			<td>{{BRL}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>CAD</td>
-			<td>Canadian Dollar</td>
-			<td>{{CAD}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>CHF</td>
-			<td>Swiss Franc</td>
-			<td>{{CHF}}</td>	    
-		</tr>
-		<tr>
-			<td>¥</td> 
-			<td>CNY</td>
-			<td>Chinese Yuan</td>
-			<td>{{CNY}}</td>	    
-		</tr>
-		<tr>
-			<td>₡</td>
-			<td>CRC</td>
-			<td>Costa Rican Colon</td>
-			<td>{{CRC}}</td>
-		</tr>
-		<tr>
-			<td>Kč</td> 
-			<td>CZK</td>
-			<td>Czech Republic Koruna</td>
-			<td>{{CZK}}</td>	    
-		</tr>
-		<tr>
-			<td>kr</td> 
-			<td>DKK</td>
-			<td>Danish Krone</td>
-			<td>{{DKK}}</td>	    
-		</tr>
-		<tr>
-			<td>RD$</td>
-			<td>DOP</td>
-			<td>Dominican Peso</td>
-			<td>{{DOP}}</td>
-		</tr>
-		<tr>
-			<td>E£</td>
-			<td>EGP</td>
-			<td>Egyptian Pound</td>
-			<td>{{EGP}}</td>
-		</tr>
-		<tr>
-			<td>€</td> 
-			<td>EUR</td>
-			<td>Euro</td>
-			<td>{{EUR}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>FJD</td>
-			<td>Fijian Dollar</td>
-			<td>{{FJD}}</td>
-		</tr>
-		<tr>
-			<td>£</td>
-			<td>GBP</td>
-			<td>British Pound Sterling</td>
-			<td>{{GBP}}</td>
-		</tr>
-		<tr>
-			<td>Q</td>
-			<td>GTQ</td>
-			<td>Guatemalan Quetzal</td>
-			<td>{{GTQ}}</td>
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>GYD</td>
-			<td>Guyanaese Dollar</td>
-			<td>{{GYD}}</td>
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>HKD</td>
-			<td>Hong Kong Dollar</td>
-			<td>{{HKD}}</td>	    
-		</tr>
-		<tr>
-			<td>kn</td> 
-			<td>HRK</td>
-			<td>Croatian Kuna</td>
-			<td>{{HRK}}</td>	    
-		</tr>
-		<tr>
-			<td>G</td>
-			<td>HTG</td>
-			<td>Haitian Gourde</td>
-			<td>{{HTG}}</td>
-		</tr>
-		<tr>
-			<td>Ft</td> 
-			<td>HUF</td>
-			<td>Hungarian Forint</td>
-			<td>{{HUF}}</td>	    
-		</tr>
-		<tr>
-			<td>Rp</td>
-			<td>IDR</td>
-			<td>Indonesian Rupiah</td>
-			<td>{{IDR}}</td>
-		</tr>
-		<tr>
-			<td>₪</td> 
-			<td>ILS</td>
-			<td>Israeli Shekel</td>
-			<td>{{ILS}}</td>	    
-		</tr>
-		<tr>
-			<td>₹</td>
-			<td>INR</td>
-			<td>Indian Rupee</td>
-			<td>{{INR}}</td>
-		</tr>
-		<tr>
-			<td>﷼</td>
-			<td>IRR</td>
-			<td>Iranian Rial</td>
-			<td>{{IRR}}</td>
-		</tr>
-		<tr>
-			<td>kr</td>
-			<td>ISK</td>
-			<td>Icelandic Króna</td>
-			<td>{{ISK}}</td>
-		</tr>
-		<tr>
-			<td>J$</td>
-			<td>JMD</td>
-			<td>Jamaican Dollar</td>
-			<td>{{JMD}}</td>
-		</tr>
-		<tr>
-			<td>¥</td> 
-			<td>JPY</td>
-			<td>Japanese Yen</td>
-			<td>{{JPY}}</td>	    
-		</tr>
-		<tr>
-			<td>៛</td>
-			<td>KHR</td>
-			<td>Cambodian Riel</td>
-			<td>{{KHR}}</td>
-		</tr>
-		<tr>
-			<td>₩</td>
-			<td>KPW</td>
-			<td>North Korean Won</td>
-			<td>{{KPW}}</td>
-		</tr>
-		<tr>
-			<td>₩</td> 
-			<td>KRW</td>
-			<td>South Korean Won</td>
-			<td>{{KRW}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>LRD</td>
-			<td>Liberian Dollar</td>
-			<td>{{LRD}}</td>
-		</tr>
-		<tr>
-			<td>MOP$</td>
-			<td>MOP</td>
-			<td>Macanese Pataca</td>
-			<td>{{MOP}}</td>
-		</tr>
-		<tr>
-			<td>₮</td>
-			<td>MNT</td>
-			<td>Mongolian Tugrik</td>
-			<td>{{MNT}}</td>
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>MXN</td>
-			<td>Mexican Peso</td>
-			<td>{{MXN}}</td>	    
-		</tr>
-		<tr>
-			<td>RM</td> 
-			<td>MYR</td>
-			<td>Malaysian Ringgit</td>
-			<td>{{MYR}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>NAD</td>
-			<td>Namibian Dollar</td>
-			<td>{{NAD}}</td>
-		</tr>
-		<tr>
-			<td>kr</td> 
-			<td>NOK</td>
-			<td>Norwegian Krone</td>
-			<td>{{NOK}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>NZD</td>
-			<td>New Zealand Dollar</td>
-			<td>{{NZD}}</td>	    
-		</tr>
-		<tr>
-			<td>﷼</td>
-			<td>OMR</td>
-			<td>Omani Rial</td>
-			<td>{{OMR}}</td>
-		</tr>
-		<tr>
-			<td>B/..</td>
-			<td>PAB</td>
-			<td>Panamanian Balboa</td>
-			<td>{{PAB}}</td>
-		</tr>
-		<tr>
-			<td>S/..</td>
-			<td>PEN</td>
-			<td>Peruvian Sol</td>
-			<td>{{PEN}}</td>
-		</tr>
-		<tr>
-			<td>₱</td> 
-			<td>PHP</td>
-			<td>Philippines Peso</td>
-			<td>{{PHP}}</td>	    
-		</tr>
-		<tr>
-			<td>₨</td>
-			<td>PKR</td>
-			<td>Pakistani Rupee</td>
-			<td>{{PKR}}</td>
-		</tr>
-		<tr>
-			<td>zł</td> 
-			<td>PLN</td>
-			<td>Polish Zloty</td>
-			<td>{{PLN}}</td>	    
-		</tr>
-		<tr>
-			<td>﷼</td>
-			<td>QAR</td>
-			<td>Qatari Rial</td>
-			<td>{{QAR}}</td>
-		</tr>
-		<tr>
-			<td>lei</td> 
-			<td>RON</td>
-			<td>Romania New Leu</td>
-			<td>{{RON}}</td>	    
-		</tr>
-		<tr>
-			<td>РСД</td>
-			<td>RSD</td>
-			<td>Serbian Dinar</td>
-			<td>{{RSD}}</td>
-		</tr>
-		<tr>
-			<td>₽</td> 
-			<td>RUB</td>
-			<td>Russian Ruble</td>
-			<td>{{RUB}}</td>	    
-		</tr>
-		<tr>
-			<td>SR</td>
-			<td>SAR</td>
-			<td>Saudi Riyal</td>
-			<td>{{SAR}}</td>
-		</tr>
-		<tr>
-			<td>kr</td> 
-			<td>SEK</td>
-			<td>Swedish Krona</td>
-			<td>{{SEK}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td> 
-			<td>SGD</td>
-			<td>Singapore Dollar</td>
-			<td>{{SGD}}</td>	    
-		</tr>
-		<tr>
-			<td>Le</td>
-			<td>SLL</td>
-			<td>Sierra Leonean Leone</td>
-			<td>{{SLL}}</td>
-		</tr>
-		<tr>
-			<td>฿</td> 
-			<td>THB</td>
-			<td>Thai Baht</td>
-			<td>{{THB}}</td>	    
-		</tr>
-		<tr>
-			<td>₺</td> 
-			<td>TRY</td>
-			<td>Turkish Lira</td>
-			<td>{{TRY}}</td>	    
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>USD</td>
-			<td>United States Dollar</td>
-			<td>{{USD}}</td>
-		</tr>
-		<tr>
-			<td>₫</td>
-			<td>VND</td>
-			<td>Vietnamese Dong</td>
-			<td>{{VND}}</td>
-		</tr>
-		<tr>
-			<td>$</td>
-			<td>XCD</td>
-			<td>East Caribbean Dollar</td>
-			<td>{{XCD}}</td>
-		</tr>
-		<tr>
-			<td>R</td> 
-			<td>ZAR</td>
-			<td>South African Rand</td>
-			<td>{{ZAR}}</td>	    
-		</tr>
+<div align="center">
+	<table style="width:80%">
+		<thead>
+			<tr>
+				<th>Symbol</th>
+				<th>Code</th>
+				<th>Currency</th> 
+				<th>Daily Rate</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>؋</td>
+				<td>AFN</td>
+				<td>Afghan Afghani</td>
+				<td>{{AFN}}</td>
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>ARS</td>
+				<td>Argentine Peso</td>
+				<td>{{ARS}}</td>
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>AUD</td>
+				<td>Australian Dollar</td>
+				<td>{{AUD}}</td>	    
+			</tr>
+			<tr>
+				<td>лв</td> 
+				<td>BGN</td>
+				<td>Bulgarian Lev</td>
+				<td>{{BGN}}</td>
+			</tr>
+			<tr>
+				<td>R$</td> 
+				<td>BRL</td>
+				<td>Brazilian Real</td>
+				<td>{{BRL}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>CAD</td>
+				<td>Canadian Dollar</td>
+				<td>{{CAD}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>CHF</td>
+				<td>Swiss Franc</td>
+				<td>{{CHF}}</td>	    
+			</tr>
+			<tr>
+				<td>¥</td> 
+				<td>CNY</td>
+				<td>Chinese Yuan</td>
+				<td>{{CNY}}</td>	    
+			</tr>
+			<tr>
+				<td>₡</td>
+				<td>CRC</td>
+				<td>Costa Rican Colon</td>
+				<td>{{CRC}}</td>
+			</tr>
+			<tr>
+				<td>Kč</td> 
+				<td>CZK</td>
+				<td>Czech Republic Koruna</td>
+				<td>{{CZK}}</td>	    
+			</tr>
+			<tr>
+				<td>kr</td> 
+				<td>DKK</td>
+				<td>Danish Krone</td>
+				<td>{{DKK}}</td>	    
+			</tr>
+			<tr>
+				<td>RD$</td>
+				<td>DOP</td>
+				<td>Dominican Peso</td>
+				<td>{{DOP}}</td>
+			</tr>
+			<tr>
+				<td>E£</td>
+				<td>EGP</td>
+				<td>Egyptian Pound</td>
+				<td>{{EGP}}</td>
+			</tr>
+			<tr>
+				<td>€</td> 
+				<td>EUR</td>
+				<td>Euro</td>
+				<td>{{EUR}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>FJD</td>
+				<td>Fijian Dollar</td>
+				<td>{{FJD}}</td>
+			</tr>
+			<tr>
+				<td>£</td>
+				<td>GBP</td>
+				<td>British Pound Sterling</td>
+				<td>{{GBP}}</td>
+			</tr>
+			<tr>
+				<td>Q</td>
+				<td>GTQ</td>
+				<td>Guatemalan Quetzal</td>
+				<td>{{GTQ}}</td>
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>GYD</td>
+				<td>Guyanaese Dollar</td>
+				<td>{{GYD}}</td>
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>HKD</td>
+				<td>Hong Kong Dollar</td>
+				<td>{{HKD}}</td>	    
+			</tr>
+			<tr>
+				<td>kn</td> 
+				<td>HRK</td>
+				<td>Croatian Kuna</td>
+				<td>{{HRK}}</td>	    
+			</tr>
+			<tr>
+				<td>G</td>
+				<td>HTG</td>
+				<td>Haitian Gourde</td>
+				<td>{{HTG}}</td>
+			</tr>
+			<tr>
+				<td>Ft</td> 
+				<td>HUF</td>
+				<td>Hungarian Forint</td>
+				<td>{{HUF}}</td>	    
+			</tr>
+			<tr>
+				<td>Rp</td>
+				<td>IDR</td>
+				<td>Indonesian Rupiah</td>
+				<td>{{IDR}}</td>
+			</tr>
+			<tr>
+				<td>₪</td> 
+				<td>ILS</td>
+				<td>Israeli Shekel</td>
+				<td>{{ILS}}</td>	    
+			</tr>
+			<tr>
+				<td>₹</td>
+				<td>INR</td>
+				<td>Indian Rupee</td>
+				<td>{{INR}}</td>
+			</tr>
+			<tr>
+				<td>﷼</td>
+				<td>IRR</td>
+				<td>Iranian Rial</td>
+				<td>{{IRR}}</td>
+			</tr>
+			<tr>
+				<td>kr</td>
+				<td>ISK</td>
+				<td>Icelandic Króna</td>
+				<td>{{ISK}}</td>
+			</tr>
+			<tr>
+				<td>J$</td>
+				<td>JMD</td>
+				<td>Jamaican Dollar</td>
+				<td>{{JMD}}</td>
+			</tr>
+			<tr>
+				<td>¥</td> 
+				<td>JPY</td>
+				<td>Japanese Yen</td>
+				<td>{{JPY}}</td>	    
+			</tr>
+			<tr>
+				<td>៛</td>
+				<td>KHR</td>
+				<td>Cambodian Riel</td>
+				<td>{{KHR}}</td>
+			</tr>
+			<tr>
+				<td>₩</td>
+				<td>KPW</td>
+				<td>North Korean Won</td>
+				<td>{{KPW}}</td>
+			</tr>
+			<tr>
+				<td>₩</td> 
+				<td>KRW</td>
+				<td>South Korean Won</td>
+				<td>{{KRW}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>LRD</td>
+				<td>Liberian Dollar</td>
+				<td>{{LRD}}</td>
+			</tr>
+			<tr>
+				<td>MOP$</td>
+				<td>MOP</td>
+				<td>Macanese Pataca</td>
+				<td>{{MOP}}</td>
+			</tr>
+			<tr>
+				<td>₮</td>
+				<td>MNT</td>
+				<td>Mongolian Tugrik</td>
+				<td>{{MNT}}</td>
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>MXN</td>
+				<td>Mexican Peso</td>
+				<td>{{MXN}}</td>	    
+			</tr>
+			<tr>
+				<td>RM</td> 
+				<td>MYR</td>
+				<td>Malaysian Ringgit</td>
+				<td>{{MYR}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>NAD</td>
+				<td>Namibian Dollar</td>
+				<td>{{NAD}}</td>
+			</tr>
+			<tr>
+				<td>kr</td> 
+				<td>NOK</td>
+				<td>Norwegian Krone</td>
+				<td>{{NOK}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>NZD</td>
+				<td>New Zealand Dollar</td>
+				<td>{{NZD}}</td>	    
+			</tr>
+			<tr>
+				<td>﷼</td>
+				<td>OMR</td>
+				<td>Omani Rial</td>
+				<td>{{OMR}}</td>
+			</tr>
+			<tr>
+				<td>B/..</td>
+				<td>PAB</td>
+				<td>Panamanian Balboa</td>
+				<td>{{PAB}}</td>
+			</tr>
+			<tr>
+				<td>S/..</td>
+				<td>PEN</td>
+				<td>Peruvian Sol</td>
+				<td>{{PEN}}</td>
+			</tr>
+			<tr>
+				<td>₱</td> 
+				<td>PHP</td>
+				<td>Philippines Peso</td>
+				<td>{{PHP}}</td>	    
+			</tr>
+			<tr>
+				<td>₨</td>
+				<td>PKR</td>
+				<td>Pakistani Rupee</td>
+				<td>{{PKR}}</td>
+			</tr>
+			<tr>
+				<td>zł</td> 
+				<td>PLN</td>
+				<td>Polish Zloty</td>
+				<td>{{PLN}}</td>	    
+			</tr>
+			<tr>
+				<td>﷼</td>
+				<td>QAR</td>
+				<td>Qatari Rial</td>
+				<td>{{QAR}}</td>
+			</tr>
+			<tr>
+				<td>lei</td> 
+				<td>RON</td>
+				<td>Romania New Leu</td>
+				<td>{{RON}}</td>	    
+			</tr>
+			<tr>
+				<td>РСД</td>
+				<td>RSD</td>
+				<td>Serbian Dinar</td>
+				<td>{{RSD}}</td>
+			</tr>
+			<tr>
+				<td>₽</td> 
+				<td>RUB</td>
+				<td>Russian Ruble</td>
+				<td>{{RUB}}</td>	    
+			</tr>
+			<tr>
+				<td>SR</td>
+				<td>SAR</td>
+				<td>Saudi Riyal</td>
+				<td>{{SAR}}</td>
+			</tr>
+			<tr>
+				<td>kr</td> 
+				<td>SEK</td>
+				<td>Swedish Krona</td>
+				<td>{{SEK}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td> 
+				<td>SGD</td>
+				<td>Singapore Dollar</td>
+				<td>{{SGD}}</td>	    
+			</tr>
+			<tr>
+				<td>Le</td>
+				<td>SLL</td>
+				<td>Sierra Leonean Leone</td>
+				<td>{{SLL}}</td>
+			</tr>
+			<tr>
+				<td>฿</td> 
+				<td>THB</td>
+				<td>Thai Baht</td>
+				<td>{{THB}}</td>	    
+			</tr>
+			<tr>
+				<td>₺</td> 
+				<td>TRY</td>
+				<td>Turkish Lira</td>
+				<td>{{TRY}}</td>	    
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>USD</td>
+				<td>United States Dollar</td>
+				<td>{{USD}}</td>
+			</tr>
+			<tr>
+				<td>₫</td>
+				<td>VND</td>
+				<td>Vietnamese Dong</td>
+				<td>{{VND}}</td>
+			</tr>
+			<tr>
+				<td>$</td>
+				<td>XCD</td>
+				<td>East Caribbean Dollar</td>
+				<td>{{XCD}}</td>
+			</tr>
+			<tr>
+				<td>R</td> 
+				<td>ZAR</td>
+				<td>South African Rand</td>
+				<td>{{ZAR}}</td>	    
+			</tr>
+		</tbody>
 	</table>
 </div>
