--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,5 +1,7 @@
 <div *ngIf="user">
-	<h2 class="page-header">{{user.name}}</h2>
+	<h2 class="page-header">Hi {{user.name}}</h2>
+	<h3>Welcome to your page</h3>
+	<p>Your user information is listed here</p>
 	<ul class="list-group">
 		<li class="list-group-item">Employee Id: {{user.employeeId}}</li>
 		<li class="list-group-item">Email: {{user.email}}</li>
