--- a/client/src/app/components/calculator/calculator.component.html
+++ b/client/src/app/components/calculator/calculator.component.html
@@ -7,73 +7,73 @@
 			<div class="col-md-12">
 				<label>From the currency I have:</label>
 				<select [(ngModel)]="fromCurrency" required="required" class="form-control" name="fromCurrency">
-					<option name="fromCurrency" value="AUD">AUD</option>
-					<option name="fromCurrency" value="BGN">BGN</option>
-					<option name="fromCurrency" value="BRL">BRL</option>
-					<option name="fromCurrency" value="CAD">CAD</option>
-					<option name="fromCurrency" value="CHF">CHF</option>
-					<option name="fromCurrency" value="CNY">CNY</option>
-					<option name="fromCurrency" value="CZK">CZK</option>
-					<option name="fromCurrency" value="DKK">DKK</option>
-					<option name="fromCurrency" value="EUR">EUR</option>
-					<option name="fromCurrency" value="GBP">GBP</option>
-					<option name="fromCurrency" value="HKD">HKD</option>
-					<option name="fromCurrency" value="HRK">HRK</option>
-					<option name="fromCurrency" value="HUF">HUF</option>
-					<option name="fromCurrency" value="ILS">ILS</option>
-					<option name="fromCurrency" value="INR">INR</option>
-					<option name="fromCurrency" value="JPY">JPY</option>
-					<option name="fromCurrency" value="KRW">KRW</option>
-					<option name="fromCurrency" value="MXN">MXN</option>
-					<option name="fromCurrency" value="MYR">MYR</option>
-					<option name="fromCurrency" value="NOK">NOK</option>
-					<option name="fromCurrency" value="NZD">NZD</option>
-					<option name="fromCurrency" value="PHP">PHP</option>
-					<option name="fromCurrency" value="PLN">PLN</option>
-					<option name="fromCurrency" value="RON">RON</option>
-					<option name="fromCurrency" value="RUB">RUB</option>
-					<option name="fromCurrency" value="SEK">SEK</option>
-					<option name="fromCurrency" value="SGD">SGD</option>
-					<option name="fromCurrency" value="THB">THB</option>
-					<option name="fromCurrency" value="TRY">TRY</option>
-					<option name="fromCurrency" value="USD">USD</option>
-					<option name="fromCurrency" value="ZAR">ZAR</option>
+					<option name="fromCurrency" value="AUD">AUD &minus; Australian Dollar</option>
+					<option name="fromCurrency" value="BGN">BGN &minus; Bulgarian Lev</option>
+					<option name="fromCurrency" value="BRL">BRL &minus; Brazilian Real</option>
+					<option name="fromCurrency" value="CAD">CAD &minus; Canadian Dollar</option>
+					<option name="fromCurrency" value="CHF">CHF &minus; Swiss Franc</option>
+					<option name="fromCurrency" value="CNY">CNY &minus; Chinese Yuan</option>
+					<option name="fromCurrency" value="CZK">CZK &minus; Czech Republic Koruna</option>
+					<option name="fromCurrency" value="DKK">DKK &minus; Danish Krone</option>
+					<option name="fromCurrency" value="EUR">EUR &minus; Euro</option>
+					<option name="fromCurrency" value="GBP">GBP &minus; British Pound Sterling</option>
+					<option name="fromCurrency" value="HKD">HKD &minus; Hong Kong Dollar</option>
+					<option name="fromCurrency" value="HRK">HRK &minus; Croation Kuna</option>
+					<option name="fromCurrency" value="HUF">HUF &minus; Hungarian Forint</option>
+					<option name="fromCurrency" value="ILS">ILS &minus; Israeli Shekel</option>
+					<option name="fromCurrency" value="INR">INR &minus; Indian Rupee</option>
+					<option name="fromCurrency" value="JPY">JPY &minus; Japanese Yen</option>
+					<option name="fromCurrency" value="KRW">KRW &minus; South Korean Won</option>
+					<option name="fromCurrency" value="MXN">MXN &minus; Mexican Peso</option>
+					<option name="fromCurrency" value="MYR">MYR &minus; Malaysian Ringgit</option>
+					<option name="fromCurrency" value="NOK">NOK &minus; Norwegian Krone</option>
+					<option name="fromCurrency" value="NZD">NZD &minus; New Zealand Dollar</option>
+					<option name="fromCurrency" value="PHP">PHP &minus; Philippines Peso</option>
+					<option name="fromCurrency" value="PLN">PLN &minus; Polish Zloty</option>
+					<option name="fromCurrency" value="RON">RON &minus; Romania New Leu</option>
+					<option name="fromCurrency" value="RUB">RUB &minus; Russian Ruble</option>
+					<option name="fromCurrency" value="SEK">SEK &minus; Swedish Krona</option>
+					<option name="fromCurrency" value="SGD">SGD &minus; Singapore Dollar</option>
+					<option name="fromCurrency" value="THB">THB &minus; Thai Baht</option>
+					<option name="fromCurrency" value="TRY">TRY &minus; Turkish Lira</option>
+					<option name="fromCurrency" value="USD">USD &minus; United States Dollar</option>
+					<option name="fromCurrency" value="ZAR">ZAR &minus; South African Rand</option>
 				</select>
 			</div>
 			<div class="col-md-12">
 				<label>To the currency I want:</label>
 				<select [(ngModel)]="toCurrency" required="required" class="form-control" name="toCurrency">
-					<option name="toCurrency" value="AUD">AUD</option>
-					<option name="toCurrency" value="BGN">BGN</option>
-					<option name="toCurrency" value="BRL">BRL</option>
-					<option name="toCurrency" value="CAD">CAD</option>
-					<option name="toCurrency" value="CHF">CHF</option>
-					<option name="toCurrency" value="CNY">CNY</option>
-					<option name="toCurrency" value="CZK">CZK</option>
-					<option name="toCurrency" value="DKK">DKK</option>
-					<option name="toCurrency" value="EUR">EUR</option>
-					<option name="toCurrency" value="GBP">GBP</option>
-					<option name="toCurrency" value="HKD">HKD</option>
-					<option name="toCurrency" value="HRK">HRK</option>
-					<option name="toCurrency" value="HUF">HUF</option>
-					<option name="toCurrency" value="ILS">ILS</option>
-					<option name="toCurrency" value="INR">INR</option>
-					<option name="toCurrency" value="JPY">JPY</option>
-					<option name="toCurrency" value="KRW">KRW</option>
-					<option name="toCurrency" value="MXN">MXN</option>
-					<option name="toCurrency" value="MYR">MYR</option>
-					<option name="toCurrency" value="NOK">NOK</option>
-					<option name="toCurrency" value="NZD">NZD</option>
-					<option name="toCurrency" value="PHP">PHP</option>
-					<option name="toCurrency" value="PLN">PLN</option>
-					<option name="toCurrency" value="RON">RON</option>
-					<option name="toCurrency" value="RUB">RUB</option>
-					<option name="toCurrency" value="SEK">SEK</option>
-					<option name="toCurrency" value="SGD">SGD</option>
-					<option name="toCurrency" value="THB">THB</option>
-					<option name="toCurrency" value="TRY">TRY</option>
-					<option name="toCurrency" value="USD">USD</option>
-					<option name="toCurrency" value="ZAR">ZAR</option>
+					<option name="toCurrency" value="AUD">AUD &minus; Australian Dollar</option>
+					<option name="toCurrency" value="BGN">BGN &minus; Bulgarian Lev</option>
+					<option name="toCurrency" value="BRL">BRL &minus; Brazilian Real</option>
+					<option name="toCurrency" value="CAD">CAD &minus; Canadian Dollar</option>
+					<option name="toCurrency" value="CHF">CHF &minus; Swiss Franc</option>
+					<option name="toCurrency" value="CNY">CNY &minus; Chinese Yuan</option>
+					<option name="toCurrency" value="CZK">CZK &minus; Czech Republic Koruna</option>
+					<option name="toCurrency" value="DKK">DKK &minus; Danish Krone</option>
+					<option name="toCurrency" value="EUR">EUR &minus; Euro</option>
+					<option name="toCurrency" value="GBP">GBP &minus; British Pound Sterling</option>
+					<option name="toCurrency" value="HKD">HKD &minus; Hong Kong Dollar</option>
+					<option name="toCurrency" value="HRK">HRK &minus; Croation Kuna</option>
+					<option name="toCurrency" value="HUF">HUF &minus; Hungarian Forint</option>
+					<option name="toCurrency" value="ILS">ILS &minus; Israeli Shekel</option>
+					<option name="toCurrency" value="INR">INR &minus; Indian Rupee</option>
+					<option name="toCurrency" value="JPY">JPY &minus; Japanese Yen</option>
+					<option name="toCurrency" value="KRW">KRW &minus; South Korean Won</option>
+					<option name="toCurrency" value="MXN">MXN &minus; Mexican Peso</option>
+					<option name="toCurrency" value="MYR">MYR &minus; Malaysian Ringgit</option>
+					<option name="toCurrency" value="NOK">NOK &minus; Norwegian Krone</option>
+					<option name="toCurrency" value="NZD">NZD &minus; New Zealand Dollar</option>
+					<option name="toCurrency" value="PHP">PHP &minus; Philippines Peso</option>
+					<option name="toCurrency" value="PLN">PLN &minus; Polish Zloty</option>
+					<option name="toCurrency" value="RON">RON &minus; Romania New Leu</option>
+					<option name="toCurrency" value="RUB">RUB &minus; Russian Ruble</option>
+					<option name="toCurrency" value="SEK">SEK &minus; Swedish Krona</option>
+					<option name="toCurrency" value="SGD">SGD &minus; Singapore Dollar</option>
+					<option name="toCurrency" value="THB">THB &minus; Thai Baht</option>
+					<option name="toCurrency" value="TRY">TRY &minus; Turkish Lira</option>
+					<option name="toCurrency" value="USD">USD &minus; United States Dollar</option>
+					<option name="toCurrency" value="ZAR">ZAR &minus; South African Rand</option>
 				</select>
 			</div>
 			<div class="col-md-12">
